# factoring-sat

./: .gitignore  Makefile  README.md  eqlen.py  semiprimes.sage  semiprimes.txt  semiprimes_100.txt  semiprimes_105-300.txt  semiprimes_eqlen.txt  semiprimes_gt100.sage  semiprimes_selection.txt
instances/: .gitignore  Makefile  count.py  fixbits.py  gen.py  gensat.hs
instances/fixed_bits/: README.md
instances/gensat/: CHANGELOG.md  gensat.cabal
instances/gensat/app/: Main.hs
instances/karatsuba/: plot_count.py
instances/long/: Makefile  addCheck.py  alpha.py  checkAll.sh  count.txt  plot_count.py
instances/multi_long/: Makefile  multigen.py
nmr/: Makefile  mult2eqs.hs  mult2eqs.py  nmr.wls  simplify.sh
nmr/simplified/: 10_527.txt  10_529.txt  10_551.txt  10_589.txt  10_667.txt  10_713.txt  10_841.txt  10_899.txt  10_961.txt  11_1369.txt  11_1517.txt  11_1591.txt  11_1739.txt  4_9.txt  5_25.txt  6_35.txt  6_49.txt  7_121.txt  8_143.txt  8_169.txt  9_289.txt  9_323.txt  9_361.txt  9_391.txt  9_437.txt  9_493.txt
solve/: total.py
solve/combined/: combined.eps  plot.py
solve/fixed_bits/: img.7z  plot.py  plot_more.py  shuffle.txt  solve.py  solve_more.py  timing.7z  timing_lsb.txt  timing_median.txt  timing_msb.txt  timing_random_q.txt
solve/numeric/: Makefile  factor.sage  plot_factor.py  plot_trialdiv.py  semiprimes_factor.eps  semiprimes_factor.txt  semiprimes_trial_division.eps  semiprimes_trial_division.txt  trial_division.sage
solve/sat/: Makefile  collect_times.py  collect_times.sh  plot.out  plot.py  plot.sh  solve.py  stats.py  stats.sh
(+615 files in other folders)
