cabal-version:      2.4
name:               gensat
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Generate CNF-SAT instances of Boolean (multiplication) circuits

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

author:             Sebastian R. Verschoor
maintainer:         sebastian@zeroknowledge.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gensat
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        mtl ^>=2.2.2,
        dlist ^>=1.0,
        split ^>=0.2.3.4,
        containers ^>=0.6.4.1,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2
    hs-source-dirs:   app
    default-language: Haskell2010
